--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_map: ^3.1.0
   latlong2: ^0.8.1
+  flutter_inset_box_shadow: ^1.0.7
+  custom_sliding_segmented_control: ^1.8.1
+  slide_to_act: ^2.0.1
+  simple_drawer: ^0.0.11
 
 dev_dependencies:
   flutter_test:
