--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   custom_sliding_segmented_control: ^1.8.1
   slide_to_act: ^2.0.1
   simple_drawer: ^0.0.11
+  rounded_expansion_tile: ^0.0.13
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +68,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - assets/img/
+      - assets/img/formatoLugarImagen/
+      - assets/img/iconoAglomeracion/
+      - assets/img/lugarImagen/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
