Ultimo cambio sin Firebase

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_map: ^3.1.0
   latlong2: ^0.8.1
+  geolocator: ^10.1.0
   flutter_inset_box_shadow: ^1.0.7
   custom_sliding_segmented_control: ^1.8.1
   slide_to_act: ^2.0.1
@@ -44,9 +45,9 @@ dependencies:
   rounded_expansion_tile: ^0.0.13
   flutter_image_slideshow: ^0.1.6
   action_slider: ^0.7.0
-  icons_plus: ^4.0.0
   expansion_tile_group: ^1.2.4
-
+  avatar_glow: ^2.0.2
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
