--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.3 <4.0.0'
+  sdk: '>=3.1.4 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -47,6 +47,11 @@ dependencies:
   action_slider: ^0.7.0
   expansion_tile_group: ^1.2.4
   avatar_glow: ^2.0.2
+  firebase_core: ^2.24.0
+  firebase_auth: ^4.15.0
+  provider: ^6.1.1
+  fluttertoast: ^8.2.4
+  cloud_firestore: ^4.13.3
   
 dev_dependencies:
   flutter_test:
